crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__reverse_error_A.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&reverse_error"
---
NotFound {
    code: "A",
    system: Ccsr,
}
