crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__reverse_error_X999.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&reverse_error"
---
NotFound {
    code: "X999",
    system: Ccsr,
}
