crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__reverse_error_XYZ.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&reverse_error"
---
NotFound {
    code: "XYZ",
    system: Ccsr,
}
